--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,13 +4,13 @@
 
 @layer base {
   html {
-    font-family: "Michroma", system-ui, sans-serif;
+    font-family: "Raleway", sans-serif;
   }
 }
 
 body {
   margin: 0;
-  font-family: "Michroma", sans-serif;
+  font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -18,4 +18,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
